--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <title> Sample Website </title>
 
 <body>
-<h2> Welcome to Intellipaat's Devops Certification Course Hello World</h2>
+<h2> Welcome to vardaas Devops Certification Course Hello World</h2>
 
-<h3> These changes are being deployed automatically</h3>
+<h3> These changes sexy man are being deployed automatically</h3>
 
-<h3> This is another change that I want to check </h3>
+<h3> This is another change that bdbfdsbn I want to check </h3>
 </body>
 </html>
